@@ -140,7 +140,7 @@ The \fBcommands\fP string will be executed after exiting the interactive loop of
 		 Execute simulated press of keysym at startup.
 .TP
 .B \-D {filename}, \-\-load\-image\-descriptions\-file {filename}
-Load image descriptions from {filename}. In {filename} each line is the name of an image file (its basename will be taken), then a Tab character (unless \-\-image\-descriptions\-file\-separator specifies otherwise), then the description text. Each description will be put in the _comment variable of the image at load time. Will override the comment eventually loaded from the file (e.g. JPEG, PNG or TIFF comment). Special comment lines like "#!fim:var=val" will lead i:var to be assigned value val (unquoted) at image loading time (cached variable). Special comment lines like "#!fim:+=val" will add val to current description. Special comment lines like "#!fim:^=val" will set val to be the base of each description. Special comment lines like "#!fim:!=" will reset all cached variables. Special description text begins with markers:  with "#!fim:=" the last description line to be used; with "#!fim:+" what follows + will be appended to the last description line; with "#!fim:^" what follows ^ will be prepended to the last description line; with "#!fim:s/f/t" the last description line will be used, but occurrences of string f will be substituted with string t (f and t can contain anything but not a /). If val is empty that variable will be unset. These variables are stored also in an internal index used by the limit command. This option sets _caption_over_image=2, so that a caption will be displayed over the image.
+Load image descriptions from {filename}. In {filename} each line is the name of an image file (its basename will be taken), then a Tab character (unless \-\-image\-descriptions\-file\-separator specifies otherwise), then the description text. Each description will be put in the _comment variable of the image at load time. Will override the comment eventually loaded from the file (e.g. JPEG, PNG or TIFF comment). Special comment lines like "#!fim:var=val" will lead i:var to be assigned value val (unquoted) at image loading time (cached variable). Special comment lines like "#!fim:+=val" will add val to current description. Special comment lines like "#!fim:^=val" will set val to be the base of each description. Special comment lines like "#!fim:!=" will reset all cached variables. Special comment lines like "#!fim:/=dir" will prepend dir to each file's basename. Special comment lines like "#!fim:\e=dir" will prepend dir to each file's name. Special description text begins with markers:  with "#!fim:=" the last description line to be used; with "#!fim:+" what follows + will be appended to the last description line; with "#!fim:^" what follows ^ will be prepended to the last description line; with "#!fim:s/f/t" the last description line will be used, but occurrences of string f will be substituted with string t (f and t can contain anything but not a /). If val is empty that variable will be unset. These variables are stored also in an internal index used by the limit command. This option sets _caption_over_image=2, so that a caption will be displayed over the image.
 .TP
 .B \-S {sepchar}, \-\-image\-descriptions\-file\-separator {sepchar}
 A character to be used as a separator between the filename and the description part of lines specified just before a \-\-load\-image\-descriptions\-file.
